3_department-service_[Deployment].yml

#[DEPLOYMENT]
#3_department-service_[Deployment].yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: department-service
  namespace: default
  labels:
    app: microservicio-department-service
    role: backend
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicio-department-service
      version: v1.0.0  
  template:
    metadata:
      labels:
        app: microservicio-department-service
        version: v1.0.0
    spec:
      containers:                  
        - name: microservicio-department-service
          image: maktup/department-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          #--------------------------#  
          volumeMounts:
          - mountPath: /app/log
            name: volumen-logs
      volumes:
        - name: volumen-logs
          emptyDir: {}   
          #--------------------------#
