3_department-service_[Service].yml

#[SERVICE]
#3_department-service_[Service].yml

apiVersion: v1
kind: Service
metadata:
  name: department-service
  namespace: default
  labels:
    app: microservicio-department-service
    role: backend
    stage: production
spec: 
  ports:
    - name: http
      port: 8080
  selector:
    app: microservicio-department-service
    version: v1.0.0
  type: NodePort
